Added support for ftb packs.
With fork from itzg/minecraft-server